--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body {
   margin-left: 20px;
   margin-top: 20px;
   background-color: #3498db;
-  font-size: large;
+  font-size: 30px;
   color: #fff;
   border: none;
   border-radius: 5px;
