--- a/style.css
+++ b/style.css
@@ -142,12 +142,11 @@ body {
   font-size: 14px;
 }
 
-.container2 button {
-  padding: 30px 60px;
+.main2 button {
+  padding: 12px 20px;
   margin-left: 20px;
   margin-top: 20px;
   background-color: #3498db;
-  font-size: 30px;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -155,10 +154,16 @@ body {
   transition: background-color 0.3s ease; /* Smooth transition on hover */
 }
 
-.container2 button:hover {
-  background-color: #2980b9;
+.main2 button:hover {
+  background-color: #2980b9; /* Darker color on hover */
 }
 
+/* Responsive adjustments */
+@media only screen and (max-width: 600px) {
+  .main2 a {
+    width: 100%; /* Make the button full width on small screens */
+  }
+}
 /* Responsive adjustments */
 @media only screen and (max-width: 1200px) {
   .container2 a {
