--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ button {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-right: 50px 0;
+  margin: 10px 0;
 }
 
 button:hover {
